fix comment spacing and image rendering

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -56,6 +56,7 @@ img {
 	height: auto;
 	max-width: 100%;
 	border: 0;
+	image-rendering: initial;
 }
 
 h1,
@@ -427,10 +428,15 @@ a {
 	height: 75px;
 }
 
+.comment {
+	margin-bottom: 12px;
+}
+
 .comment .content {
 	margin-top: 6px;
 }
 
 .comment .replyto {
-	margin-top: 8px;
+	display: inline-block;
+	margin-top: 6px;
 }
